--- a/crypto-dashboard/vercel.json
+++ b/crypto-dashboard/vercel.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
     "builds": [
-      { "src": "api/**/*.js", "use": "@vercel/node" }
+      { "src": "backend/index.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/api/$1" }
+      { "src": "/api/(.*)", "dest": "/backend/index.js" }
     ]
   }
   
