--- a/crypto-dashboard/vercel.json
+++ b/crypto-dashboard/vercel.json
@@ -1,10 +1,27 @@
 {
     "version": 2,
     "builds": [
-      { "src": "backend/index.js", "use": "@vercel/node" }
+      {
+        "src": "backend/index.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "src/index.js",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "build"
+        }
+      }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/backend/index.js" }
+      {
+        "src": "/api/(.*)",
+        "dest": "/backend/index.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/src/index.js"
+      }
     ]
   }
   
