--- a/crypto-dashboard/vercel.json
+++ b/crypto-dashboard/vercel.json
@@ -6,11 +6,8 @@
         "use": "@vercel/node"
       },
       {
-        "src": "src/index.js",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "build"
-        }
+        "src": "package.json",
+        "use": "@vercel/static-build"
       }
     ],
     "routes": [
@@ -20,7 +17,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "/src/index.js"
+        "dest": "/index.html"
       }
     ]
   }
