--- a/crypto-dashboard/package.json
+++ b/crypto-dashboard/package.json
@@ -1,32 +1,26 @@
 {
   "name": "crypto-dashboard",
   "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
+    "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "chart.js": "^3.5.0",
-    "chartjs-chart-financial": "^0.1.0",
     "axios": "^0.21.1",
-    "react-chartjs-2": "^3.0.4"
+    "chart.js": "^3.5.1",
+    "chartjs-chart-financial": "^0.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.4",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3"
   },
-  "proxy": "http://localhost:5000",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "devDependencies": {
+    "chartjs-adapter-date-fns": "^3.0.0"
+  },
+  "proxy": "http://localhost:5000"
 }
