--- a/crypto-dashboard/vercel.json
+++ b/crypto-dashboard/vercel.json
@@ -1,24 +1,15 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "backend/index.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build"
-      }
+      { "src": "src/index.js", "use": "@vercel/node" },
+      { "src": "backend/index.js", "use": "@vercel/node" }
     ],
+    "env": {
+      "NODE_OPTIONS": "--openssl-legacy-provider"
+    },
     "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/backend/index.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
+      { "src": "/api/(.*)", "dest": "/backend/index.js" },
+      { "src": "/(.*)", "dest": "/src/index.js" }
     ]
   }
   
