--- a/crypto-dashboard/vercel.json
+++ b/crypto-dashboard/vercel.json
@@ -1,7 +1,11 @@
 {
     "version": 2,
     "builds": [
-      { "src": "src/index.js", "use": "@vercel/node" },
+      {
+        "src": "src/**/*",
+        "use": "@vercel/static-build",
+        "config": { "distDir": "build" }
+      },
       { "src": "backend/index.js", "use": "@vercel/node" }
     ],
     "env": {
