--- a/crypto-dashboard/package.json
+++ b/crypto-dashboard/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crypto-dashboard",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
