--- a/crypto-dashboard/vercel.json
+++ b/crypto-dashboard/vercel.json
@@ -1,18 +1,14 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build"
-      },
-      {
-        "src": "backend/index.js",
-        "use": "@vercel/node"
-      }
+      { "src": "backend/index.js", "use": "@vercel/node" },
+      { "src": "src/**/*", "use": "@vercel/static-build" }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/backend/index.js" },
-      { "src": "/(.*)", "dest": "/src/index.js" }
-    ]
+      { "src": "/api/(.*)", "dest": "/backend/index.js" }
+    ],
+    "env": {
+      "NODE_OPTIONS": "--openssl-legacy-provider"
+    }
   }
   
