--- a/crypto-dashboard/package.json
+++ b/crypto-dashboard/package.json
@@ -1,26 +1,38 @@
 {
-  "name": "crypto-dashboard",
+  "name": "frontend",
   "version": "1.0.0",
   "private": true,
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "axios": "^0.21.1",
+    "chart.js": "^3.2.1",
+    "chartjs-chart-financial": "^0.1.0",
+    "chartjs-adapter-date-fns": "^2.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "chart.js": "^3.5.1",
-    "chartjs-chart-financial": "^0.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "react": "^17.0.2",
-    "react-chartjs-2": "^3.0.4",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "devDependencies": {
-    "chartjs-adapter-date-fns": "^3.0.0"
-  },
-  "proxy": "http://localhost:5000"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
